--- a/test/fixtures.yml
+++ b/test/fixtures.yml
@@ -76,6 +76,11 @@ beanstream_interac:
 bit_pay:
   api_key: 'rKrahSl7WRrYeKRUhGzbvW3nBzo0jG4FPaL8uPYaoPk'
 
+# Working credentials, no need to replace
+blue_dog:
+  login: demo
+  password: password
+
 blue_pay:
   login: '100096218902'
   password: 'MBUVE4G1BACMFM4W3XQHUUL2SMQRP.LW'
